 | __ ) _ __ ___  __ _| | _____ _ __ 
 |  _ \| '__/ _ \/ _` | |/ / _ \ '__|
 | |_) | | |  __/ (_| |   <  __/ |   
 |____/|_|  \___|\__,_|_|\_\___|_|   

Allan Legemaate, Allan Daniel Software
-------------------------
 A.D.S. Games 2012-2017
 Changelog:
-------------------------

Version 1.2.7
--------------
*Removed code warnings
*Properly fix memory leaks
*FPS counter displays properly
*Buttons hovered do not press when keypressed
*No transitions (they were so slow)
*GUI changes

Version 1.2.6
--------------
*Now uses libogg, libvobis and liblogg for music

Version 1.2.5
--------------
*Cleaned up code
*Smaller highscores table
*Change resolution in data/config.dat

Version 1.2.4
--------------
*Transition fades smoothed out
*New buttons
*Exploding blocks!
*Removed cursor trail

Version 1.2.3
--------------
*Full Screen support
*Now full support for resolutions 320x480, 640x480 and 1280x960
*All images updated for HD graphics support!
*Config file for options (data/config.txt)
*Start falling animation
*Game finish autodetects when out of moves
*Now running on FPS system (speed consistant from machine to machine)
*Scores "dissapearing" bug fixed
*In game lag bugs fixed!
*Flashing of selected blocks consistant
*Timer resets each round

Version 1.2.2
--------------
*More graphic changes
*New font loaded

Version 1.2.1
--------------
*Reduced game size
*Made graphic changes
*Added in initial high scores
*Removed controls.txt
*Removed unneeded files

Version 1.2
--------------
*Fixed block duplication
*Changed orange block sprite
*High Scores added!
*Transition effects added
*Created seperate menu for difficulty selection
*Minor sprite changes
*Intro added
*Significantly decreased game size
*Now using fmod for music

Version 1.1
--------------
*Music added
*Menu added
*Difficultys added
*Speed fixes
*Help menu
*Controls.txt added
*In game menu image changed

Version 1.0
--------------
*Game released

Visit us at www.adsgames.net
Contact us at contact@adsgames.net