@@ -2,9 +2,9 @@ Allan 5000
 Danward 4500
 L.K. 4000
 DudefaceIII 3750
-Player 3560
 Johnny 3500
-Jimmo 3310
-Player 3170
+Player 3210
 SlimeKnight 3000
-Player 2950
+Billy 2500
+Jimothy 2000
+Carter 1000
