@@ -1,1 +1,10 @@
-Allan 5000 Danward 4500 L.K. 4000 DudefaceIII 3750 Johnny 3500 SlimeKnight 3000 Billy 2500 Maurice 2000 Carter 1000 Andrew 500 
+Allan 5000
+Danward 4500
+L.K. 4000
+DudefaceIII 3750
+Johnny 3500
+SlimeKnight 3000
+Billy 2500
+Jimothy 2000
+Carter 1000
+Andrew 500
