@@ -12,35 +12,15 @@ scoreTable::scoreTable( const char *filePath){
 
 // Read High Scores
 bool scoreTable::load(){
-  // New file
-  FILE *fp;
-  fp = fopen( filePath, "r");
+  std::ifstream read( filePath);
 
-  // Exists?
-  if (fp == NULL)
-    return false;
-
-  // Temps
-  char name[32];
-  char score[32];
-  int r, line_num = 0;
-
-  // Parse line by line
-  r = fscanf( fp, "%s %s\n", name, score);
-  while( r != EOF){
-    if( line_num >= TABLE_SIZE)
-      return true;
-    else if( r == 2){
-      scores[line_num][0] = name;
-      scores[line_num][1] = score;
-      std::cout << line_num << ":" << scores[line_num][0] << " " << scores[line_num][1] << "\n";
+  for (int i = 0; i < 10; i++){
+    for( int t = 0; t < 2; t++){
+      read >> scores[i][t];
     }
-    else
-      return false;
-
-    r = fscanf( fp, "%s %s\n", name, score);
-    line_num++;
   }
+  read.close();
+
   return true;
 }
 
@@ -54,13 +34,13 @@ void scoreTable::addScore( std::string name, int score){
     name = "Player";
 
   // Update List
-  /*for( int i = 0; i < TABLE_SIZE; i++){
-    if( score > atoi(scores[i][1].c_str())){
+  for( int i = 0; i < TABLE_SIZE; i++){
+    if( score > atoi( scores[i][1].c_str())){
       for( int t = 9; t > i; t--){
         scores[t][1] = scores[t - 1][1];
         scores[t][0] = scores[t - 1][0];
       }
-      scores[i][1] = intToString(score);
+      scores[i][1] = convert::intToString(score).c_str();
       scores[i][0] = name;
       break;
     }
@@ -69,21 +49,26 @@ void scoreTable::addScore( std::string name, int score){
   // Save Scores
   std::ofstream saveFile;
   saveFile.open( filePath);
-  for( int i = 0; i < TABLE_SIZE; i++)
-    for( int t = 0; t < 2; t++)
-      saveFile << scores[i][t]<< " ";
-  saveFile.close();*/
+  for( int i = 0; i < TABLE_SIZE; i++){
+    for( int t = 0; t < 2; t++){
+      if( t == 0)
+        saveFile << scores[i][t]<< " ";
+      else
+        saveFile << scores[i][t]<< "\n";
+    }
+  }
+  saveFile.close();
 }
 
 // Get names
-const char* scoreTable::scoreAt( int index){
+std::string scoreTable::scoreAt( int index){
   if( index >= 0 && index < TABLE_SIZE)
     return scores[index][0];
   return "";
 }
 
 // Get scores
-const char* scoreTable::nameAt( int index){
+std::string scoreTable::nameAt( int index){
   if( index >= 0 && index < TABLE_SIZE)
     return scores[index][1];
   return "";
